--- a/AzureServicesTests/MainPage.xaml
+++ b/AzureServicesTests/MainPage.xaml
@@ -8,6 +8,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+        <Button Content="Test"/>
     </Grid>
 </Page>
